RESOLVED FIXED125185
jit/JITArithmetic.cpp doesn't build for non-X86 ports
https://bugs.webkit.org/show_bug.cgi?id=125185
Summary jit/JITArithmetic.cpp doesn't build for non-X86 ports
Michael Saboff
Reported 2013-12-03 14:30:26 PST
For non X86 ports, JIT::emit_op_mod() declares and initializes result, op1 & op2, and doesn't use any of them. There UNUSED_PARAM() for op1 and op2, but not for result. The declarations and initializations along with the UNUSED_PARAM() can all be removed.
Attachments
Patch for landing (1.35 KB, patch)
2013-12-03 14:34 PST, Michael Saboff
no flags
Michael Saboff
Comment 1 2013-12-03 14:34:50 PST
Created attachment 218343 [details] Patch for landing
Michael Saboff
Comment 2 2013-12-03 14:35:28 PST
Note You need to log in before you can comment on or make changes to this bug.