jit/JITArithmetic.cpp doesn't build for non-X86 ports https://bugs.webkit.org/show_bug.cgi?id=125185

Rubber stamped by Mark Hahnenberg.

Removed unused declarations and related UNUSED_PARAM().

* jit/JITArithmetic.cpp:
(JSC::JIT::emit_op_mod):


Canonical link: https://commits.webkit.org/143280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160042 268f45cc-cd09-0410-ab3c-d52691b4dbfc